--- a/nicnbk-ui-angular2/src/app/reporting/view/lookup.values.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/lookup.values.nb.reporting.component.html
@@ -10,14 +10,14 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>Currency rates</td>
-                    <!--<td> !!!!!!! </td>-->
-                    <td>
-                        <button class="btn btn-sm btn-primary" [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates']">Edit</button>
-                        <!--<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>-->
-                    </td>
-                </tr>
+                <!--<tr>-->
+                    <!--<td>Currency rates</td>-->
+                    <!--&lt;!&ndash;<td> !!!!!!! </td>&ndash;&gt;-->
+                    <!--<td>-->
+                        <!--<button class="btn btn-sm btn-primary" [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates']">Edit</button>-->
+                        <!--&lt;!&ndash;<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>&ndash;&gt;-->
+                    <!--</td>-->
+                <!--</tr>-->
                 <tr>
                     <td>Typed Lookups</td>
                     <!--<td> !!!!!!! </td>-->
