Lookups - Benchmarks: clear edit form on close button

--- a/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
@@ -209,7 +209,7 @@
                         <button type="button" class="btn btn-success" (click)="save()">Save</button>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" (click)='closeBenchmarkEditModal()' data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
