Benchmarks: added YTD

--- a/nicnbk-ui-angular2/public/css/common.css
+++ b/nicnbk-ui-angular2/public/css/common.css
@@ -666,3 +666,10 @@ h4 a:focus, h4 a:hover {
     background: #F5F0E7;
     text-decoration: none;
 }
+
+
+
+/* Google table styles */
+.tableCellCenter {
+    text-align: center;
+}
