--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.edit.component.html
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div id="PROFILE" role="tabpanel" aria-labelledby="PROFILE" class="tab-pane active">
+        <div [ngBusy]="busy" id="PROFILE" role="tabpanel" aria-labelledby="PROFILE" class="tab-pane active">
             <h4>Profile Information</h4>
 
             <div class="col-md-3 col-lg-3 " align="center">
@@ -59,15 +59,21 @@
 
             <div class=" col-md-9 col-lg-9 ">
                 <div class="row form-group">
+                    <label class="control-label col-sm-2">Last name:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" [(ngModel)]="employee.lastName"/>
+                    </div>
+                </div>
+                <div class="row form-group">
                     <label class="control-label col-sm-2">First name:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" [(ngModel)]="employee.firstName"/>
                     </div>
                 </div>
                 <div class="row form-group">
-                    <label class="control-label col-sm-2">Last name:</label>
+                    <label class="control-label col-sm-2">Patronymic:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" [(ngModel)]="employee.lastName"/>
+                        <input type="text" class="form-control" [(ngModel)]="employee.patronymic"/>
                     </div>
                 </div>
                 <div class="row form-group">
@@ -82,11 +88,29 @@
                     </div>
                 </div>
                 <div class="row form-group">
+                    <div class="col-sm-12">
+                        <label class="control-label col-sm-2">Position:</label>
+                        <div class="col-sm-5">
+                            <select id="department" class="form-control" name="department" [(ngModel)]="chosenDepartment"
+                                    (change)="departmentChanged($event.target.value)">
+                                <option *ngFor = "let department of departments" [value]="department?.code">{{department?.nameEn}}</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-5">
+                            <select [disabled] = "chosenDepartment == null" id="position" class="form-control" name="position" [(ngModel)]="chosenPosition">
+                                <option *ngFor = "let position of departmentPositions" [value]="position?.code">{{position?.nameEn}}</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="row form-group">
                     <label class="control-label col-sm-2">Username:</label>
                     <div class="col-sm-10">
                         <span class="form-control-static">{{employee.username}}</span>
                     </div>
                 </div>
+
+                <br/>
                 <div class="row form-group">
                     <label class="control-label col-sm-2">Status:</label>
                     <div class="col-sm-10">
