--- a/nicnbk-ui-angular2/src/app/hr/view/hr-docs-list.component.html
+++ b/nicnbk-ui-angular2/src/app/hr/view/hr-docs-list.component.html
@@ -1,6 +1,12 @@
 <div class="container">
     <div class="row top-buffer" >
         <div class="col-md-12">
+            <div class="alert alert-info" *ngIf="successMessage != null"><span>{{successMessage}}</span>
+            </div>
+        </div>
+    </div>
+    <div class="row top-buffer" >
+        <div class="col-md-12">
             <div class="alert alert-danger" *ngIf="errorMessage != null">{{errorMessage}}</div>
         </div>
     </div>
@@ -17,5 +23,39 @@
                 <span>{{file.name}}</span>
             </div>
         </div>
+        <!--<div class="row pull-right">-->
+            <!--<ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">-->
+                <!--<li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>-->
+                <!--<li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">-->
+                    <!--<a (click)="search(i)">{{i}}</a>-->
+                <!--</li>-->
+                <!--<li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>-->
+            <!--</ul>-->
+        <!--</div>-->
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>NAME</th>
+                    <th>ACTIONS</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor = "let doc of docsList" style="cursor: pointer">
+                    <td width="90%"><a>{{doc.fileName}}</a></td>
+                    <!--<td width="10%">-->
+                        <!--<a><i class="glyphicon glyphicon-file" (click)="navigate('/pe/fundReport/', firm.id)"></i></a>-->
+                    <!--</td>-->
+                </tr>
+            </tbody>
+        </table>
+        <!--<div class="row pull-right">-->
+            <!--<ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">-->
+                <!--<li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>-->
+                <!--<li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">-->
+                    <!--<a (click)="search(i)">{{i}}</a>-->
+                <!--</li>-->
+                <!--<li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>-->
+            <!--</ul>-->
+        <!--</div>-->
     </div>
 </div>
