--- a/nicnbk-ui-angular2/src/app/common/view/file-attachment-downloader.component.html
+++ b/nicnbk-ui-angular2/src/app/common/view/file-attachment-downloader.component.html
@@ -1,9 +1,9 @@
-<a (click)="download()">
+<a (click)="download()" style="cursor: pointer">
     <span *ngIf="showIcon" class="glyphicon glyphicon-file" style="font-size:25px"></span>
     <div *ngIf="showIcon" class="row" style="font-size:10px">
         {{displayFileName != null ? displayFileName : fileName}}
     </div>
-    <div *ngIf="!showIcon" class="row">
+    <div *ngIf="!showIcon" class="row withpadding">
         {{displayFileName != null ? displayFileName : fileName}}
     </div>
     <!--<i class="glyphicon glyphicon-download-alt" *ngIf="!pending"></i>-->
